--- a/devel/zlib/Makefile
+++ b/devel/zlib/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.50 2014/09/10 10:46:07 richard Exp $
+# $NetBSD: Makefile,v 1.51 2014/09/19 09:07:27 richard Exp $
 
 DISTNAME=	zlib-1.2.8
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=libpng/} \
 		http://zlib.net/
@@ -20,6 +20,9 @@ PKGCONFIG_OVERRIDE+=	zlib.pc.in
 
 CFLAGS+=		${CPPFLAGS}
 LDFLAGS.Cygwin=		-no-undefined
+
+CPPFLAGS.SunOS+=	-DNO_DIVIDE
+LDFLAGS.SunOS+=	-Wl,-zignore	# avoid unused reference to libgcc_s.so
 
 SUBST_CLASSES+= pc
 SUBST_MESSAGE.pc= pkg-config file substitutions
