--- a/math/R-DAAG/Makefile
+++ b/math/R-DAAG/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2014/08/26 15:48:39 brook Exp $
+# $NetBSD: Makefile,v 1.11 2014/09/19 19:42:13 brook Exp $
 
 CATEGORIES=	math
 MASTER_SITES=	${MASTER_SITE_R_CRAN:=contrib/}
@@ -11,7 +11,7 @@ LICENSE=	gnu-gpl-v3
 R_PKGNAME=	DAAG
 R_PKGVER=	1.20
 
-DEPENDS+=	R-latticeExtra>=0.6.26:../../math/R-latticeExtra
+DEPENDS+=	R-latticeExtra>=0.6.26:../../graphics/R-latticeExtra
 
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
