--- a/math/R-plyr/Makefile
+++ b/math/R-plyr/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2014/08/26 16:40:40 brook Exp $
+# $NetBSD: Makefile,v 1.3 2014/09/19 21:19:40 brook Exp $
 
 CATEGORIES=	math
 MASTER_SITES=	${MASTER_SITE_R_CRAN:=contrib/}
@@ -14,5 +14,5 @@ R_PKGVER=	1.8.1
 USE_LANGUAGES+=	c++
 
 .include "../../math/R/Makefile.extension"
-.include "../../math/R-Rcpp/buildlink3.mk"
+.include "../../devel/R-Rcpp/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
