--- a/math/R-evaluate/Makefile
+++ b/math/R-evaluate/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2014/09/03 16:59:19 brook Exp $
+# $NetBSD: Makefile,v 1.2 2014/09/19 21:21:17 brook Exp $
 
 CATEGORIES=	math
 MASTER_SITES=	${MASTER_SITE_R_CRAN:=contrib/}
@@ -11,7 +11,7 @@ COMMENT=	Parsing and evaluation tools
 R_PKGNAME=	evaluate
 R_PKGVER=	0.5.5
 
-DEPENDS+=	R-stringr>=0.6.2:../../math/R-stringr
+DEPENDS+=	R-stringr>=0.6.2:../../textproc/R-stringr
 
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
