--- a/math/R-knitr/Makefile
+++ b/math/R-knitr/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2014/09/19 22:47:06 brook Exp $
+# $NetBSD: Makefile,v 1.5 2014/09/20 03:34:56 brook Exp $
 
 CATEGORIES=	math
 MASTER_SITES=	${MASTER_SITE_R_CRAN:=contrib/}
@@ -12,7 +12,7 @@ R_PKGNAME=	knitr
 R_PKGVER=	1.6
 
 DEPENDS+=	R-evaluate>=0.5.3:../../math/R-evaluate
-DEPENDS+=	R-digest>=0.6.4:../../math/R-digest
+DEPENDS+=	R-digest>=0.6.4:../../security/R-digest
 DEPENDS+=	R-formatR>=0.10:../../textproc/R-formatR
 DEPENDS+=	R-highr>=0.3:../../textproc/R-highr
 DEPENDS+=	R-markdown>=0.6.5:../../textproc/R-markdown
