--- a/lang/snobol/Makefile
+++ b/lang/snobol/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.29 2014/07/06 18:25:31 jakllsch Exp $
+# $NetBSD: Makefile,v 1.30 2014/09/20 18:13:29 jakllsch Exp $
 #
 
 DISTNAME=	snobol4-1.3
@@ -38,7 +38,7 @@ MAKE_JOBS_SAFE=		NO
 
 post-build:
 	${CP} ${WRKSRC}/doc/head ${WRKSRC}/doc/tutorial
-	tar -Ozxf ${DISTDIR}/vanilla.tar.gz vanilla/snobol4.man >> ${WRKSRC}/doc/tutorial
+	tar -Ozxf ${DISTDIR}/${DIST_SUBDIR}/vanilla.tar.gz vanilla/snobol4.man >> ${WRKSRC}/doc/tutorial
 	${GZIP_CMD} ${WRKSRC}/doc/tutorial
 
 post-install:
