--- a/graphics/libsixel/Makefile
+++ b/graphics/libsixel/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.6 2014/09/05 11:47:51 obache Exp $
+# $NetBSD: Makefile,v 1.7 2014/09/21 10:47:36 obache Exp $
 
 DISTNAME=		libsixel-1.0.3
 CATEGORIES=		graphics
 MASTER_SITES=		-${HOMEPAGE:Q}/archive/v${PKGVERSION_NOREV}${EXTRACT_SUFX}
 
 MAINTAINER=		obache@NetBSD.org
-HOMEPAGE=		https://github.com/saitoha/libsixel
+HOMEPAGE=		http://saitoha.github.io/libsixel/
 COMMENT=		DEC SIXEL graphics codec encoder/decoder and converter
 LICENSE=		mit AND public-domain
 
