--- a/databases/libcassandra/Makefile
+++ b/databases/libcassandra/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.25 2014/08/13 10:57:34 adam Exp $
+# $NetBSD: Makefile,v 1.26 2014/09/22 11:52:18 joerg Exp $
 #
 
 DISTNAME=		libcassandra-20101010
@@ -36,7 +36,7 @@ MAKE_ENV+=		AM_DEFAULT_VERBOSITY=1
 
 .include "../../mk/compiler.mk"
 .if !empty(PKGSRC_COMPILER:Mclang)
-CXXFLAGS+=	-Wno-c++11-extensions
+CXXFLAGS+=	-Wno-c++11-extensions -Wno-error=unused-local-typedef
 .endif
 
 .include "../../mk/bsd.pkg.mk"
