--- a/ham/gnuradio-core-docs/Makefile
+++ b/ham/gnuradio-core-docs/Makefile
@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.27 2014/08/13 10:57:36 adam Exp $
+# $NetBSD: Makefile,v 1.28 2014/09/22 11:54:15 joerg Exp $
 
 PKGNAME=	gnuradio-core-docs-${VERSION}
 COMMENT=	GNU Radio core module documentation
-PKGREVISION=	22
+PKGREVISION=	23
 
 .include "../../meta-pkgs/gnuradio/Makefile.common"
 
 CONFIGURE_ARGS+=--enable-doxygen
 
-BUILD_DEPENDS+=doxygen>=1.8.7nb1:../../devel/doxygen
+BUILD_DEPENDS+=doxygen>=1.8.8:../../devel/doxygen
 
 BUILD_DIRS=	docs
 
