--- a/sysutils/open-vm-tools/Makefile
+++ b/sysutils/open-vm-tools/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.46 2014/05/05 00:48:21 ryoon Exp $
+# $NetBSD: Makefile,v 1.47 2014/09/22 12:02:05 joerg Exp $
 
 DISTNAME=	open-vm-tools-2008.08.08-109361
 PKGNAME=	open-vm-tools-2008.08.08.109361
@@ -34,6 +34,11 @@ RCD_SCRIPTS=			vmtools
 
 pre-configure:
 	cd ${WRKSRC} && autoreconf -f
+
+.include "../../mk/compiler.mk"
+.if !empty(PKGSRC_COMPILER:Mclang)
+_WRAP_EXTRA_ARGS.CC+=	-Wno-error=unused-local-typedef
+.endif
 
 .include "../../net/libdnet/buildlink3.mk"
 .include "../../security/openssl/buildlink3.mk"
