--- a/net/Makefile
+++ b/net/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1035 2014/09/03 07:11:05 he Exp $
+# $NetBSD: Makefile,v 1.1036 2014/09/23 13:21:16 he Exp $
 #
 
 COMMENT=	Networking tools
@@ -459,6 +459,7 @@ SUBDIR+=	p5-Net-SNMP-Mixin
 SUBDIR+=	p5-Net-Server
 SUBDIR+=	p5-Net-Server-Coro
 SUBDIR+=	p5-Net-Server-SS-PreFork
+SUBDIR+=	p5-Net-SSH-Expect
 SUBDIR+=	p5-Net-TFTP
 SUBDIR+=	p5-Net-Telnet
 SUBDIR+=	p5-Net-Telnet-Cisco
