--- a/misc/wdic/Makefile
+++ b/misc/wdic/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2012/10/08 09:57:40 asau Exp $
+# $NetBSD: Makefile,v 1.4 2014/09/23 14:53:03 jperkin Exp $
 #
 
 DISTNAME=		wdic_wob_v3.0
@@ -13,6 +13,8 @@ COMMENT=		English dictionary for Korean
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 WRKSRC=			${WRKDIR}
+
+LDFLAGS.SunOS+=		-lsocket -lnsl
 
 INSTALLATION_DIRS=	bin
 
