--- a/lang/polyml/Makefile
+++ b/lang/polyml/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2014/09/13 18:23:38 asau Exp $
+# $NetBSD: Makefile,v 1.12 2014/09/23 15:13:23 asau Exp $
 
 DISTNAME=	polyml.5.5.2
 PKGNAME=	polyml-5.5.2
+PKGREVISION=	1
 CATEGORIES=	lang
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=polyml/}
 
@@ -16,6 +17,14 @@ CONFIGURE_ARGS=	--with-system-libffi
 USE_LIBTOOL=	yes
 USE_LANGUAGES=	c c++
 TEST_TARGET=	tests
+
+PKGCONFIG_OVERRIDE=	libpolyml/polyml.pc.in
+
+SUBST_CLASSES+=		rpath
+SUBST_SED.rpath=	-e s';-L@libdir@;-L@libdir@ ${COMPILER_RPATH_FLAG}@libdir@;g'
+SUBST_FILES.rpath=	libpolyml/polyml.pc.in
+SUBST_STAGE.rpath=	pre-configure
+SUBST_MESSAGE.rpath=	Adding RPATH flag to pkg-config file.
 
 .include "options.mk"
 
