--- a/time/p5-DateTime-TimeZone/Makefile
+++ b/time/p5-DateTime-TimeZone/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.90 2017/06/05 14:25:04 ryoon Exp $
+# $NetBSD: Makefile,v 1.91 2017/06/14 12:31:54 wiz Exp $
 
-DISTNAME=	DateTime-TimeZone-2.11
+DISTNAME=	DateTime-TimeZone-2.13
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	time perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DateTime/}
 
