--- a/www/p5-Kwiki/Makefile
+++ b/www/p5-Kwiki/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.22 2017/06/05 14:25:24 ryoon Exp $
+# $NetBSD: Makefile,v 1.23 2017/06/14 13:05:48 jperkin Exp $
 
 DISTNAME=	Kwiki-0.39
 PKGNAME=	p5-${DISTNAME}
@@ -11,6 +11,8 @@ HOMEPAGE=	http://www.kwiki.org/
 COMMENT=	Extensible, modular, Perl-based Wiki
 
 DEPENDS+=	p5-Spoon>=0.22:../../devel/p5-Spoon
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 PERL5_PACKLIST=		auto/Kwiki/.packlist
 
