--- a/security/p5-IO-Socket-SSL/Makefile
+++ b/security/p5-IO-Socket-SSL/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.117 2017/06/05 14:24:33 ryoon Exp $
+# $NetBSD: Makefile,v 1.118 2017/06/14 13:07:54 wiz Exp $
 
-DISTNAME=	IO-Socket-SSL-2.048
+DISTNAME=	IO-Socket-SSL-2.049
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	security net perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=IO/}
 
