--- a/databases/p5-ORLite-Migrate/Makefile
+++ b/databases/p5-ORLite-Migrate/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2017/06/05 14:22:30 ryoon Exp $
+# $NetBSD: Makefile,v 1.16 2017/06/14 13:27:37 jperkin Exp $
 
 DISTNAME=	ORLite-Migrate-1.10
 PKGNAME=	p5-${DISTNAME}
@@ -24,6 +24,8 @@ BUILDLINK_API_DEPENDS.p5-DBI+=	p5-DBI>=1.580
 
 USE_LANGUAGES=	# empty
 PERL5_PACKLIST= auto/ORLite/Migrate/.packlist
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../databases/p5-DBI/buildlink3.mk"
 .include "../../lang/perl5/module.mk"
