--- a/www/p5-Net-HTTP/Makefile
+++ b/www/p5-Net-HTTP/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.21 2017/06/05 14:25:27 ryoon Exp $
+# $NetBSD: Makefile,v 1.22 2017/06/14 13:31:16 wiz Exp $
 
-DISTNAME=	Net-HTTP-6.15
+DISTNAME=	Net-HTTP-6.16
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	www perl5 net
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Net/}
 
@@ -11,10 +10,8 @@ HOMEPAGE=	http://search.cpan.org/dist/Net-HTTP/
 COMMENT=	Perl 5 module for low-level HTTP connections (client)
 LICENSE=	${PERL5_LICENSE}
 
-#necessary for test
+# TEST_DEPENDS
 BUILD_DEPENDS+=	p5-URI-[0-9]*:../../www/p5-URI
-
-CONFLICTS+=	p5-libwww<6.00
 
 USE_LANGUAGES=	# empty
 PERL5_PACKLIST= auto/Net/HTTP/.packlist
