--- a/databases/p5-DBIx-Class-Schema-Loader/Makefile
+++ b/databases/p5-DBIx-Class-Schema-Loader/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.32 2017/06/05 14:22:27 ryoon Exp $
+# $NetBSD: Makefile,v 1.33 2017/06/14 13:33:38 jperkin Exp $
 
-DISTNAME=	DBIx-Class-Schema-Loader-0.07046
+DISTNAME=	DBIx-Class-Schema-Loader-0.07047
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DBIx/}
 
